<resources>
    <string name="app_name">ChatApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_code">Didn\'t get a code?</string>
    <string name="verification">Verification</string>
    <string name="verificationTextRegister">Enter your OTP code:</string>
    <string name="verifyRegister">Verify</string>
    <string name="resend_new_codeRegister">Resend new code</string>
    <string name="login_register">Login/Register</string>
    <string name="timerRegister">(Timer)</string>
    <string name="verify">Verify Number</string>
    <string name="Username">username</string>
    <string name="statusOrPhoneNumber">text</string>
    <string name="statusProfile">status</string>
    <string name="statusDetailsProfile">test</string>
    <string name="phone_noProfile">Phone no.</string>
    <string name="phoneNumberDetailsProfile">TextView</string>
    <string name="clear_conversationProfile">Clear conversation</string>
    <string name="add_imageRegister">Add image</string>
    <string name="first_nameRegister">First Name</string>
    <string name="last_nameRegister">Last Name</string>
    <string name="statusRegister">Status</string>
    <string name="displayNameRegister">Display Name</string>
    <string name="doneRegister">Done</string>
    <string name="chatHint">Write a message...</string>
    <string name="usernameToolbar">TextView</string>
    <string name="last_seen_onToolbar">Last seen on</string>
    <string name="searchHint">Search friend</string>
    <string name="contactName"> </string>
    <string name="contactLastMessage"> </string>
    <string name="textChat">text</string>
    <string name="timeChat">00:00</string>
    <string name="textChatRight">text</string>
    <string name="timeChatRight">00:00</string>


    <!-- Strings related to login -->
    <string name="prompt_phone">Phone Number</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

</resources>