<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/app_background">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp">

<!--                <com.makeramen.roundedimageview.RoundedImageView-->
<!--                    android:id="@+id/imgUser"-->
<!--                    android:layout_width="150dp"-->
<!--                    android:layout_height="150dp"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:background="@drawable/user_picture_picker"-->
<!--                    android:scaleType="centerCrop"-->
<!--                    app:riv_oval="true" />-->

                <TextView
                    android:id="@+id/imagePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/add_imageRegister"
                    android:textColor="@color/white"
                    android:textFontWeight="600"
                    android:textSize="18sp" />
            </FrameLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:visibility="gone"
                android:layout_marginTop="5dp"
                android:background="@android:color/transparent"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="150dp"
            app:cardBackgroundColor="@color/chatBackground"
            app:cardCornerRadius="10dp"
            app:cardElevation="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="25dp"
                android:orientation="vertical"
                android:paddingBottom="25dp">

                <EditText
                    android:id="@+id/firstName"
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/login_input_style"
                    android:hint="@string/first_nameRegister"
                    android:inputType="text|textCapSentences"
                    android:padding="10dp"
                    android:textColor="@color/primary_text"
                    android:textColorHint="@color/white"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/lastName"
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/login_input_style"
                    android:hint="@string/last_nameRegister"
                    android:inputType="text|textCapSentences"
                    android:padding="10dp"
                    android:textColor="@color/primary_text"
                    android:textColorHint="@color/white"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/displayName"
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/login_input_style"
                    android:hint="@string/displayNameRegister"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="@color/primary_text"
                    android:textColorHint="@color/white"
                    android:textSize="15sp"
                    android:windowSoftInputMode="stateHidden" />

                <EditText
                    android:id="@+id/status"
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/login_input_style"
                    android:hint="@string/statusRegister"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="@color/primary_text"
                    android:textColorHint="@color/white"
                    android:textSize="15sp"
                    android:windowSoftInputMode="stateHidden" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDataDone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/registration_button"
            android:text="@string/doneRegister"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>
</layout>