<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/imageLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:layout_gravity="center"
                android:background="@color/app_background"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="230dp"
                android:background="@drawable/default_background"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardName"
                    android:layout_width="match_parent"
                    android:layout_height="95dp"
                    android:layout_marginTop="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/chatBackground"
                        android:orientation="vertical"
                        android:paddingBottom="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="12dp"
                            android:orientation="horizontal"
                            android:padding="5dp">

                            <FrameLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">

<!--                                <de.hdodenhof.circleimageview.CircleImageView-->
<!--                                    android:id="@+id/imgProfile"-->
<!--                                    android:layout_width="65dp"-->
<!--                                    android:layout_height="65dp"-->
<!--                                    android:layout_gravity="center" />-->

                                <ImageView
                                    android:id="@+id/uploadPhoto"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="bottom|start"
                                    android:src="@drawable/ic_upload_photo" />
                            </FrameLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginStart="10dp"
                                android:orientation="vertical">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal">

                                    <TextView
                                        android:id="@+id/profileName"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:padding="2dp"
                                        android:text="@string/Username"
                                        android:textColor="@color/white"
                                        android:textSize="20dp"
                                        android:textStyle="bold" />

                                    <RelativeLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:layout_marginRight="8dp"
                                        android:gravity="right">

                                        <ImageView
                                            android:id="@+id/editProfileDetails"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            app:srcCompat="@drawable/ic_editprofile" />

                                        <ImageView
                                            android:id="@+id/DoneEditingProfileDetails"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            app:srcCompat="@drawable/ic_done_edit_profile" />
                                    </RelativeLayout>
                                </LinearLayout>

                                <TextView
                                    android:id="@+id/profileLastSeen"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="2dp"
                                    android:text="@string/statusOrPhoneNumber"
                                    android:textColor="@color/phoneNumberProfile"
                                    android:textSize="15dp"
                                    android:textStyle="bold" />
                            </LinearLayout>

                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:visibility="gone"
                    app:cardElevation="2dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/chatBackground"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="25dp"
                            android:paddingTop="10dp"
                            android:paddingBottom="5dp"
                            android:text="First Name"
                            android:textAllCaps="true"
                            android:textColor="@color/lightGray"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/profileFirstNameEdit"
                            style="@style/EditTextStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_marginStart="21dp"
                            android:backgroundTint="@android:color/transparent"
                            android:inputType="none"
                            android:minWidth="150.00dp"
                            android:paddingBottom="10dp"
                            android:text="test"
                            android:textSize="14.00sp"
                            android:windowSoftInputMode="adjustPan" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:visibility="gone"
                    app:cardElevation="2dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/chatBackground"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="25dp"
                            android:paddingTop="10dp"
                            android:paddingBottom="5dp"
                            android:text="Last Name"
                            android:textAllCaps="true"
                            android:textColor="@color/lightGray"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/profileLastNameEdit"
                            style="@style/EditTextStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_marginStart="21dp"
                            android:backgroundTint="@android:color/transparent"
                            android:inputType="none"
                            android:minWidth="150.00dp"
                            android:paddingBottom="10dp"
                            android:text="test"
                            android:textSize="14.00sp"
                            android:windowSoftInputMode="adjustPan" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    app:cardElevation="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/chatBackground"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="25dp"
                            android:paddingTop="10dp"
                            android:paddingBottom="5dp"
                            android:text="@string/statusProfile"
                            android:textAllCaps="true"
                            android:textColor="@color/lightGray"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/profileStatusEdit"
                                style="@style/EditTextStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="40dp"
                                android:layout_marginStart="21dp"
                                android:backgroundTint="@android:color/transparent"
                                android:inputType="none"
                                android:minWidth="150.00dp"
                                android:text="@string/statusDetailsProfile"
                                android:textSize="14.00sp"
                                android:windowSoftInputMode="adjustResize" />

                        </LinearLayout>


                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/chatBackground"
                        android:orientation="vertical"
                        android:paddingBottom="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="25dp"
                            android:paddingTop="10dp"
                            android:paddingBottom="5dp"
                            android:text="@string/phone_noProfile"
                            android:textAllCaps="true"
                            android:textColor="@color/lightGray"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/profilePhoneNumber"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:textColor="@color/lightGray"
                                android:paddingLeft="25dp"
                                android:text="@string/phoneNumberDetailsProfile"
                                android:textSize="14.00sp" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:layout_centerVertical="true"
                                android:layout_marginRight="18.00sp">

                                <ImageView
                                    android:id="@+id/callFriend"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    app:srcCompat="@drawable/ic_call" />

                                <View
                                    android:id="@+id/divider"
                                    android:layout_width="1dp"
                                    android:layout_height="match_parent"
                                    android:layout_marginLeft="20dp"
                                    android:layout_marginRight="20dp"
                                    android:layout_weight="1"
                                    android:background="@color/chatDate" />

                                <androidx.constraintlayout.widget.Guideline
                                    android:id="@+id/guideline3"
                                    android:layout_width="30dp"
                                    android:layout_height="30dp"
                                    android:layout_weight="2"
                                    android:orientation="vertical" />

                                <ImageView
                                    android:id="@+id/sendMessage"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    app:srcCompat="@drawable/ic_sendmessage" />

                            </LinearLayout>

                        </RelativeLayout>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardClearConversation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/chatBackground"
                        android:orientation="horizontal"
                        android:paddingBottom="10dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="25dp"
                            android:src="@drawable/ic_delete" />

                        <TextView
                            android:id="@+id/clearConversation"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/clear_conversationProfile"
                            android:textAllCaps="true"
                            android:textColor="@color/lightGray"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </RelativeLayout>
    </FrameLayout>
</RelativeLayout>


